fixed overlay overflowing on page 2 and 4
added .ENV to allow proper hosting on git

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,6 +2,9 @@ body{
     margin:0;
     padding: 0;;
 }
+html {
+    overflow-y:overlay ;
+}
 .Navbar{
     margin: 0;
     padding: 0;
